--- a/.hintrc
+++ b/.hintrc
@@ -4,6 +4,20 @@
   ],
   "hints": {
     "axe/forms": "off",
-    "meta-viewport": "off"
+    "meta-viewport": "off",
+    "axe/language": [
+      "default",
+      {
+        "html-has-lang": "off"
+      }
+    ],
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "backdrop-filter"
+        ]
+      }
+    ]
   }
 }
